# LaunchRange

./: .gitignore  CMakeLists.txt  README.md  build.sh
fr/: README.md
include/: discontinuous.h  dummy.hpp  launchrange.h  point.hpp  range.hpp
tests/: unit_tests.cpp
